--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "menrui/adb_sync",
-    "description": "send files to android using adb",
+    "name": "menrui/ccd2cue",
+    "description": "convert from ccd to cue",
     "type": "project",
     "license": "MIT",
     "require": {
         "menrui/menrui": "*"
     },
     "scripts": {
-        "sync": "bin/sync.php"
+        "sync": "bin/convert.php"
     },
     "autoload": {
         "psr-4": {
