fixed command nane, added shebang

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "menrui/menrui": "*"
     },
     "scripts": {
-        "sync": "bin/convert.php"
+        "convert": "bin/convert.php"
     },
     "autoload": {
         "psr-4": {
